--- a/IMS.WebApp/Components/Pages/Inventories/AddInventory.razor
+++ b/IMS.WebApp/Components/Pages/Inventories/AddInventory.razor
@@ -3,6 +3,9 @@
 <h3>AddInventory</h3>
 <br/>
 <EditForm Model="inventory" FormName="formInventory" OnValidSubmit="Save">
+    <DataAnnotationsValidator />
+    <ValidationSummary></ValidationSummary>
+    
     <div class="form-group">
         <label for="name">Inventory Name</label>
         <InputText
@@ -10,6 +13,7 @@
             @bind-Value="inventory.InventoryName"
             class="form-control">
         </InputText>
+        <ValidationMessage For="() => inventory.InventoryName"></ValidationMessage>
     </div>
     <div class="form-group">
         <label for="quantity">Quantity</label>
@@ -17,6 +21,7 @@
                      @bind-Value="inventory.Quantity"
                      class="form-control">
         </InputNumber>
+        <ValidationMessage For="() => inventory.Quantity"></ValidationMessage>
     </div>
     <div class="form-group">
         <label for="price">Price</label>
@@ -24,6 +29,7 @@
                      @bind-Value="inventory.Price"
                      class="form-control">
         </InputNumber>
+        <ValidationMessage For="() => inventory.Price"></ValidationMessage>
     </div>
     <br/>
     <button type="submit" class="btn btn-primary">Save</button>
