--- a/IMS.WebApp/Components/Pages/Inventories/AddInventory.razor
+++ b/IMS.WebApp/Components/Pages/Inventories/AddInventory.razor
@@ -1,5 +1,6 @@
 ﻿@page "/addinventory"
 @inject IAddInventoryUseCase AddInventoryUseCase
+@inject NavigationManager NavigationManager
 <h3>AddInventory</h3>
 <br/>
 <EditForm Model="inventory" FormName="formInventory" OnValidSubmit="Save">
@@ -33,6 +34,8 @@
     </div>
     <br/>
     <button type="submit" class="btn btn-primary">Save</button>
+    &nbsp;
+    <a href="/inventories" class="btn btn-primary">Cancel</a>
 </EditForm>
 
 
@@ -42,5 +45,7 @@
     private async Task Save()
     {
         await AddInventoryUseCase.ExecuteAsync(inventory);
+        
+        NavigationManager.NavigateTo("/inventories");
     }
 }
