--- a/IMS.WebApp/Components/Controls/InventoryListItemComponent.razor
+++ b/IMS.WebApp/Components/Controls/InventoryListItemComponent.razor
@@ -1,4 +1,7 @@
-﻿@if (this.Inventory is not null)
+﻿@inject IDeleteInventoryUseCase DeleteInventoryUseCase
+@inject NavigationManager NavigationManager
+
+@if (this.Inventory is not null)
 {
     <tr>
         <td>@Inventory.InventoryName</td>
@@ -6,9 +9,16 @@
         <td>@Inventory.Price.ToString("c")</td>
         <td>
             <a class="btn btn-light"
-                    href="/editinventory/@Inventory.InventoryId">
+               href="/editinventory/@Inventory.InventoryId">
                 Edit
             </a>
+        </td>
+        <td>
+            <EditForm Enhance="true" Model="Inventory"
+                      FormName="@($"form-delete-inventory-{Inventory.InventoryId}")"
+                      OnValidSubmit="() => DeleteInventory(Inventory.InventoryId)">
+                <button type="submit" class="btn btn-light">Delete</button>
+            </EditForm>
         </td>
     </tr>
 }
@@ -18,5 +28,11 @@
     // This is a parameter that can be passed to the component
     [Parameter]
     public Inventory? Inventory { get; set; }
+    
+    private async Task DeleteInventory(int inventoryId)
+    {
+        await DeleteInventoryUseCase.ExecuteAsync(inventoryId);
+        NavigationManager.NavigateTo(NavigationManager.Uri, forceLoad: true);
+    }
 
 }
