Implement Product components

--- a/IMS.WebApp/Components/_Imports.razor
+++ b/IMS.WebApp/Components/_Imports.razor
@@ -11,5 +11,6 @@
 @using IMS.CoreBusiness
 @using IMS.UseCases.Inventories.interfaces
 @using IMS.WebApp.Components.Controls
+@using IMS.UseCases.Products.interfaces
 
 
